# wmii-timetracker-written-in-haskell

./: Setup.hs  timetracker.cabal
src-timetracker/: WMII.hs  timetracker.hs
