Name:            timetracker
Version:         0.0
License:         BSD3
Author:          Marc Weber marco-oweber@gmx.de
Category:
Synopsis:        time tracking tool tracking time spend on tags (wmii)

executable timetracker2
  Main-Is:        timetracker.hs
  hs-source-dirs: src-timetracker
  Build-Depends:  
        filepath,
        directory,
        base,
        time,
        mtl,
        containers,
        process,
        old-locale,
        old-time,
        bytestring,
        parsec >= 3.0,
        unix
